--- a/src/main/resources/com/example/projectgui/InicioSesion.fxml
+++ b/src/main/resources/com/example/projectgui/InicioSesion.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="640.0" prefWidth="1110.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projectgui.InicioSesion">
+<AnchorPane prefHeight="640.0" prefWidth="1110.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.projectgui.Controller.InicioSesion">
    <children>
       <Polygon fill="#1f93fff2" layoutX="198.0" layoutY="203.0" points="480.0, -203.0, -198.0, -203.0, -198.0, 437.0, 182.66668701171875, 437.0" stroke="#00000016" strokeType="INSIDE">
          <effect>
@@ -21,7 +21,7 @@
             <Font size="20.0" />
          </font>
       </Button>
-      <TextField fx:id="txtUser" layoutX="749.0" layoutY="239.0" prefHeight="64.0" prefWidth="265.0" promptText="Nombre de usuario" style="-fx-background-radius: 10;">
+      <TextField fx:id="txtUser" layoutX="749.0" layoutY="239.0" prefHeight="64.0" prefWidth="265.0" promptText="Email" style="-fx-background-radius: 10;">
          <font>
             <Font name="Californian FB" size="18.0" />
          </font>
