--- a/src/main/resources/com/example/projectgui/Main.fxml
+++ b/src/main/resources/com/example/projectgui/Main.fxml
@@ -138,7 +138,15 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button layoutX="10.0" layoutY="314.0" mnemonicParsing="false" prefHeight="76.0" prefWidth="254.0" text="Button">
+                  <Button fx:id="btnVentas" layoutX="10.0" layoutY="314.0" mnemonicParsing="false" onAction="#handleClick" prefHeight="76.0" prefWidth="254.0" text="VENTAS">
+                     <font>
+                        <Font name="Berlin Sans FB" size="17.0" />
+                     </font>
+                     <effect>
+                        <InnerShadow />
+                     </effect>
+                  </Button>
+                  <Button fx:id="btnProveedores" layoutX="10.0" layoutY="434.0" mnemonicParsing="false" onAction="#handleClick" prefHeight="76.0" prefWidth="254.0" text="PROVEEDORES">
                      <font>
                         <Font name="Berlin Sans FB" size="17.0" />
                      </font>
